--- a/src/BcBundle/Resources/views/Autor/editAutor.html.twig
+++ b/src/BcBundle/Resources/views/Autor/editAutor.html.twig
@@ -57,3 +57,12 @@
     {% endif %}
     <br>
 {% endblock %}
+{% block javascript %}
+    <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
+    <script>
+        $("#MenuUser").toggle();
+        $("#titleUser").click(function () {
+            $("#MenuUser").toggle();
+        });
+    </script>
+{% endblock %}
