--- a/src/BcBundle/Resources/views/Autor/indexAutor.html.twig
+++ b/src/BcBundle/Resources/views/Autor/indexAutor.html.twig
@@ -6,30 +6,24 @@
             <div class="container bg-dark">
                 <br>
                 <div class="row">
-                    {% if app.user.rol == 'ADMIN' %}
-                        <div class="col-md-6">
-                            <a href="{{path("bc_add_autor")}}">
-                                <img src="{{asset("imgdata/user-add.png")}}" height="50" width="50">
-                                <input type="button" value="Inscribir autor" class="btn btn-success">
-                            </a>
-                        </div>
-                    {% endif %}
-                    <!--<div class="col-md-6">
-                        <img src="{{asset("imgdata/user-find.png")}}" height="50" width="50">
-                        <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-info">
-                    </div>-->
+                    <div class="col-md-6">
+                        <h2><b style="color: white"><i class="fas fa-check"></i> Autores </b></h2>
+                        <br>
+                        {% if app.user.rol == 'ADMIN' %}
+                            <div class="col-md-6">
+                                <a href="{{path("bc_add_autor")}}">
+                                    <img src="{{asset("imgdata/user-add.png")}}" height="50" width="50">
+                                    <input type="button" value="Inscribir autor" class="btn btn-success">
+                                </a>
+                            </div>
+                        {% endif %}
+                    </div>
                 </div>
                 <br>
             </div>
             <br>
             <div id="busq_libreria" class="container bg-info">
-                <br>
-                <div id="controlBusqueda" class="row">
-                    <div class="col-md-6">
-                        <h3><b><img src="{{asset("imgdata/user-find.png")}}" height="50" width="50">Búsqueda de autor</b></h3>
-                    </div>
-                </div>
-                <br>
+                <br><br>
             </div>
             <br>
             {% for autor in autores %}
@@ -102,12 +96,9 @@
 {% block javascript %}
     <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
     <script>
-        $(document).ready(function () {
-            $("#controlBusqueda").toggle();
-
-            $("#act_busq").click(function () {
-                $("#controlBusqueda").toggle();
-            });
+        $("#MenuUser").toggle();
+        $("#titleUser").click(function () {
+            $("#MenuUser").toggle();
         });
     </script>
 {% endblock %}
