--- a/src/BcBundle/Resources/views/Libreria/indexLibreria.html.twig
+++ b/src/BcBundle/Resources/views/Libreria/indexLibreria.html.twig
@@ -6,14 +6,15 @@
             <div class="container bg-dark">
                 <br>
                 <div class="row">
+                    <div class="col-md-6">
+                        <h2><b style="color: white"><i class="fas fa-check"></i> Liberías </b></h2><br>
                     {% if app.user.rol == 'ADMIN' %}
-                        <div class="col-md-6">
-                            <a href="{{path("bc_add_libreria")}}">
-                                <img src="{{asset("imgdata/libreria-add.png")}}" height="50" width="50">
-                                <input type="button" value="Inscribir librería" class="btn btn-success">
-                            </a>
-                        </div>
+                        <a href="{{path("bc_add_libreria")}}">
+                            <img src="{{asset("imgdata/libreria-add.png")}}" height="50" width="50">
+                            <input type="button" value="Inscribir librería" class="btn btn-success">
+                        </a>
                     {% endif %}
+                    </div>
                 </div>
                 <br>
             </div>
@@ -111,12 +112,9 @@
 {% block javascript %}
     <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
     <script>
-        $(document).ready(function () {
-            $("#controlBusqueda").toggle();
-
-            $("#act_busq").click(function () {
-                $("#controlBusqueda").toggle();
-            });
+        $("#MenuUser").toggle();
+        $("#titleUser").click(function () {
+            $("#MenuUser").toggle();
         });
     </script>
 {% endblock %}
