--- a/src/BcBundle/Resources/views/Libreria/perfilLibreria.html.twig
+++ b/src/BcBundle/Resources/views/Libreria/perfilLibreria.html.twig
@@ -127,12 +127,9 @@
 {% block javascript %}
     <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
     <script>
-        $(document).ready(function () {
-            $("#controlBusqueda").toggle();
-
-            $("#act_busq").click(function () {
-                $("#controlBusqueda").toggle();
-            });
+        $("#MenuUser").toggle();
+        $("#titleUser").click(function () {
+            $("#MenuUser").toggle();
         });
     </script>
 {% endblock %}
