--- a/src/BcBundle/Resources/views/Libro/findLibro.html.twig
+++ b/src/BcBundle/Resources/views/Libro/findLibro.html.twig
@@ -7,19 +7,7 @@
                 <br>
                 <div class="row">
                     <div class="col-md-6">
-                        <a href="{{path("bc_add_libro")}}">
-                            <img src="{{asset("imgdata/libro-add.png")}}" height="50" width="50">
-                            <input type="button" value="Proponer libro" class="btn btn-success">
-                        </a>
-                    </div>
-                    <div class="col-md-6">
-                        <img src="{{asset("imgdata/libro-find.png")}}" height="50" width="50">
-                        <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-info">
-                        {% if app.user.rol == 'ADMIN' %}
-                            <a href="{{path("bc_index_NoVallibro")}}"> 
-                                <input type="button" value="Libros NO validados" class="btn btn-danger">
-                            </a>
-                        {% endif %} 
+                        <h2><b style="color: white"><i class="fas fa-check"></i> Búsqueda </b></h2><br>
                     </div>
                 </div>
                 <br>
@@ -27,10 +15,9 @@
             <br>
             <div id="busq_libro" class="container bg-info">
                 <br>
-                <h3><b><img src="{{asset("imgdata/libro-del.png")}}" height="50" width="50">Búsqueda de libro</b></h3>
+                <h3 id="act_busq"><b><img src="{{asset("imgdata/libro-find.png")}}" height="50" width="50">Menú de búsqueda</b></h3>
                 <div id="controlBusqueda" class="row">
                     <div class="col-md-4">
-                        
                     </div>
                     <div id="controlBusqueda" class="col-md-5">
                         {{form_start(form)}}
@@ -40,7 +27,39 @@
                 <br>
             </div>
             <br>
-
+            {% if libros|length() == 0 or libros is null%}
+                <div class="container bg-primary">
+                    <div class="row">
+                        <div class="col-md-3">
+                        </div>
+                        <div class="col-md-5" align="center">
+                            <br>
+                            <img src="{{asset("imgdata/libreria-base.png")}}" height="75" width="75">
+                            <img src="{{asset("imgdata/user-find.png")}}" height="100" width="100">
+                            <br>
+                            <h1>
+                                <b>¿ Buscas algo ?</b>                      
+                            </h1>           
+                            <img src="{{asset("imgdata/libro-find.png")}}" height="100" width="100">
+                            <img src="{{asset("imgdata/user-base.png")}}" height="75" width="75">
+                            <br><br>
+                        </div>
+                    </div>
+                </div>
+            {% else %}
+                <div class="container bg-warning">
+                        <br>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h2>
+                                    <i class="fas fa-arrow-alt-circle-right"></i>{{listado.titulo}}</a>
+                                </h2>
+                            </div>
+                            <br>
+                        </div>
+                        <br>
+                    </div>
+            {% endif %}
         {% else %}
             <div class="container bg-danger">
                 <div class="row">
@@ -78,7 +97,10 @@
             $("#act_busq").click(function () {
                 $("#controlBusqueda").toggle();
             });
-
+            $("#MenuUser").toggle();
+            $("#titleUser").click(function () {
+                $("#MenuUser").toggle();
+            });
             $("#cancelarBusqueda").click(function () {
                 $("#controlBusqueda").toggle();
             });
