--- a/src/BcBundle/Resources/views/Libro/indexNoValLibro.html.twig
+++ b/src/BcBundle/Resources/views/Libro/indexNoValLibro.html.twig
@@ -7,14 +7,18 @@
                 <br>
                 <div class="row">
                     <div class="col-md-6">
+                        <h2><b style="color: white"><i class="fas fa-check"></i> Libros </b></h2><br>
                         <a href="{{path("bc_add_libro")}}">
                             <img src="{{asset("imgdata/libro-add.png")}}" height="50" width="50">
                             <input type="button" value="Proponer libro" class="btn btn-success">
                         </a>
                     </div>
                     <div class="col-md-6">
+                        <br><br><br><br>
                         <img src="{{asset("imgdata/libro-find.png")}}" height="50" width="50">
-                        <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-info">
+                        <a href="{{path("bc_find_libro")}}">
+                            <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-info">
+                        </a>
                         {% if app.user.rol == 'ADMIN' %}
                             <a href="{{path("bc_index_libro")}}">
                                 <input id="BTVerValidados" type="button" value="Ver libros validados" class="btn btn-success">
@@ -26,122 +30,109 @@
             </div>
             <br>
             <div id="busq_libro" class="container bg-info">
-                <br>
-                <div id="controlBusqueda" class="row">
-                    <div class="col-md-6">
-                        <h3><b><img src="{{asset("imgdata/libro-find.png")}}" height="50" width="50">Búsqueda de libro</b></h3>
-                    </div>
-                    <div class="col-md-6">
-                        <table style="width: 75%">
-                            <form accept-charset="utf-8" method="POST">
-                                <tr>
-                                    <td><b>Seleccione el parámetro de búsqueda : </b><br>
-                                        <select name="ParamBusq">
-                                            <option value="nada"></option>
-                                            <option value="titulo">Libro</option>
-                                            <option value="autor">Autor</option>
-                                            <option value="categoria">Categoría</option>
-                                            <option value="libreria">Localización de su librería</option>
-                                            <option value="fecha">Fecha</option>
-                                        </select>
-                                    </td>
-                                </tr>             
-                                <tr>
-                                    <td ><b>Texto de clave : </b><br>
-                                        <input type="text" id="parametroBusqueda" value="" placeholder="" maxlength="30" autocomplete="off" />
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <br><input id="activarBusqueda" type="button" value="Buscar.." class="btn btn-dark"><input id="cancelarBusqueda" type="button" value="Cancelar" class="btn btn-danger">
-                                    </td>
-                                </tr>
-                            </form>
-                        </table>
-                    </div>
-                </div>
-                <br>
+                <br><br>
             </div>
             <br>
-            {% for libro in libros %}
-                <div id="tuplaLibro_{{libro.isbn}}" class="container bg-danger">
-                    <br>
-                    <titulolibro>
-                        <h2 id="titleLibro">
-                            <i class="fas fa-arrow-alt-circle-right"></i><b> {{libro.titulo}}</b>
-                        </h2>
-                    </titulolibro>
-                    <br>
-                    <div id="bodyLibro" class="row">
-                        <div class="col-md-4 text-center">
-                            <br>
-                            {% if libro.portada == null or libro.portada == "" %}
-                                <img src="{{asset("imgdata/smile.png")}}" height="190" width="200"> 
-                            {% else %}
-                                <img src="{{asset(libro.portada)}}" height="190" width="200"> 
-                            {% endif %}
-                            {% if app.user.rol == 'ADMIN' %} 
-                                <br><br>
-
-                                <div class="row">
-                                    <div class="col-md-2"></div>
-                                    <div class="col-md-3">
-                                        <a href="{{path("bc_delete_libro",{"id":libro.id_libro})}}">
-                                            <!--<i class="fas fa-trash" style="font-size: 250%">   
-                                            </i>-->
-                                            <img src="{{asset("imgdata/libro-del.png")}}" height="50" width="50">
-                                        </a>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <a href="{{path("bc_edit_libro",{"id":libro.id_libro})}}">
-                                           <!--<i class="fas fa-pencil-alt" style="font-size: 250%">
-                                            </i>-->
-                                           <img src="{{asset("imgdata/libro-edit.png")}}" height="50" width="50">
-                                        </a>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <a href="{{path("bc_validar",{"id":libro.id_libro})}}"><i class="fa fa-check" style="font-size: 260%"></i></a>     
-                                    </div>
-                                </div>
-                                <br><br>
-                            {% endif %}
+            {% if libros|length() == 0%}
+                <div class="container bg-primary">
+                    <div class="row">
+                        <div class="col-md-3">
                         </div>
-                        <div class="col-md-8">
-                            <br><br>
-                            <h4><b>Por </b>"<i>{{libro.autor_nom}} {{libro.apellido}}</i>" </h4>
-                            <table class="bg-success" style="width: 75%">
-                                <tr>
-                                    <td>
-                                        <b>Publicado el </b> {{libro.fech_public|date('d-m-Y')}}
-                                    </td>
-                                    <td>
-                                        {% if libro.formato == 0 %}
-                                            <b> Formato : </b> Físico 
-                                        {% elseif libro.formato == 1 %}
-                                            <b> Formato : </b> Digital
-                                        {% else %}
-                                            <b> Formato :</b> Digital y físico.
-                                        {% endif %}
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <b>Categoría : "{{libro.nombre}}"</b>
-                                    </td>
-                                </tr>
-                            </table>
+                        <div class="col-md-5" align="center">
                             <br>
-                            <b>Disponible en : </b>
-                            <div id="list_tiendas">
-                                <ul>
-                                    <li><a href="{{path("bc_index_stocks",{"id":libro.id_libro})}}"><i class="fas fa-eye"></i><b> Ver mas librerías..</b></a></li>
-                                </ul>
+                            <img src="{{asset("imgdata/libro-base.png")}}" height="75" width="75">
+                            <img src="{{asset("imgdata/libro-find.png")}}" height="100" width="100">
+                            <br>
+                            <h1>
+                                <b>No hay libros para validar :( </b>                      
+                            </h1>           
+                            <img src="{{asset("imgdata/libro-find.png")}}" height="100" width="100">
+                            <img src="{{asset("imgdata/libro-base.png")}}" height="75" width="75">
+                            <br><br>
+                        </div>
+                    </div>
+                </div>
+            {% else %}
+                {% for libro in libros %}
+                    <div id="tuplaLibro_{{libro.isbn}}" class="container bg-danger">
+                        <br>
+                        <titulolibro>
+                            <h2 id="titleLibro">
+                                <i class="fas fa-arrow-alt-circle-right"></i><b> {{libro.titulo}}</b>
+                            </h2>
+                        </titulolibro>
+                        <br>
+                        <div id="bodyLibro" class="row">
+                            <div class="col-md-4 text-center">
+                                <br>
+                                {% if libro.portada == null or libro.portada == "" %}
+                                    <img src="{{asset("imgdata/smile.png")}}" height="190" width="200"> 
+                                {% else %}
+                                    <img src="{{asset(libro.portada)}}" height="190" width="200"> 
+                                {% endif %}
+                                {% if app.user.rol == 'ADMIN' %} 
+                                    <br><br>
+
+                                    <div class="row">
+                                        <div class="col-md-2"></div>
+                                        <div class="col-md-3">
+                                            <a href="{{path("bc_delete_libro",{"id":libro.id_libro})}}">
+                                                <!--<i class="fas fa-trash" style="font-size: 250%">   
+                                                </i>-->
+                                                <img src="{{asset("imgdata/libro-del.png")}}" height="50" width="50">
+                                            </a>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <a href="{{path("bc_edit_libro",{"id":libro.id_libro})}}">
+                                                <!--<i class="fas fa-pencil-alt" style="font-size: 250%">
+                                                 </i>-->
+                                                <img src="{{asset("imgdata/libro-edit.png")}}" height="50" width="50">
+                                            </a>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <a href="{{path("bc_validar",{"id":libro.id_libro})}}"><i class="fa fa-check" style="font-size: 260%"></i></a>     
+                                        </div>
+                                    </div>
+                                    <br><br>
+                                {% endif %}
+                            </div>
+                            <div class="col-md-8">
+                                <br><br>
+                                <h4><b>Por </b>"<i>{{libro.autor_nom}} {{libro.apellido}}</i>" </h4>
+                                <table class="bg-success" style="width: 75%">
+                                    <tr>
+                                        <td>
+                                            <b>Publicado el </b> {{libro.fech_public|date('d-m-Y')}}
+                                        </td>
+                                        <td>
+                                            {% if libro.formato == 0 %}
+                                                <b> Formato : </b> Físico 
+                                            {% elseif libro.formato == 1 %}
+                                                <b> Formato : </b> Digital
+                                            {% else %}
+                                                <b> Formato :</b> Digital y físico.
+                                            {% endif %}
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <b>Categoría : "{{libro.nombre}}"</b>
+                                        </td>
+                                    </tr>
+                                </table>
+                                <br>
+                                <b>Disponible en : </b>
+                                <div id="list_tiendas">
+                                    <ul>
+                                        <li><a href="{{path("bc_index_stocks",{"id":libro.id_libro})}}"><i class="fas fa-eye"></i><b> Ver mas librerías..</b></a></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <br><br> 
-            {% endfor %}
+                    <br><br> 
+                {% endfor %}
+            {% endif %}
         {% else %}
             <div class="container bg-danger">
                 <div class="row">
@@ -172,12 +163,9 @@
 {% block javascript %}
     <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
     <script>
-        $(document).ready(function () {
-            $("#controlBusqueda").toggle();
-
-            $("#act_busq").click(function () {
-                $("#controlBusqueda").toggle();
-            });
+        $("#MenuUser").toggle();
+        $("#titleUser").click(function () {
+            $("#MenuUser").toggle();
         });
     </script>
 {% endblock %}
