--- a/src/BcBundle/Resources/views/Libro/resultLibro.html.twig
+++ b/src/BcBundle/Resources/views/Libro/resultLibro.html.twig
@@ -7,23 +7,7 @@
                 <br>
                 <div class="row">
                     <div class="col-md-6">
-                        <h2><b style="color: white"><i class="fas fa-check"></i> Libros </b></h2><br>
-                        <a href="{{path("bc_add_libro")}}">
-                            <img src="{{asset("imgdata/libro-add.png")}}" height="50" width="50">
-                            <input type="button" value="Proponer libro" class="btn btn-success">
-                        </a>
-                    </div>
-                    <div class="col-md-6">
-                        <br><br><br><br>
-                        <img src="{{asset("imgdata/libro-find.png")}}" height="50" width="50">
-                        <a href="{{path("bc_find_libro")}}">
-                            <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-info">
-                        </a>
-                        {% if app.user.rol == 'ADMIN' %}
-                            <a href="{{path("bc_index_NoVallibro")}}"> 
-                                <input type="button" value="Libros NO validados" class="btn btn-danger">
-                            </a>
-                        {% endif %} 
+                        <h2><b style="color: white"><i class="fas fa-check"></i> Resultados de la búsqueda </b></h2><br>
                     </div>
                 </div>
                 <br>
@@ -145,7 +129,7 @@
 {% block javascript %}
     <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
     <script>
-        $("#MenuUser").toggle();
+  $("#MenuUser").toggle();
         $("#titleUser").click(function () {
             $("#MenuUser").toggle();
         });
