--- a/src/BcBundle/Resources/views/Stock/indexStock.html.twig
+++ b/src/BcBundle/Resources/views/Stock/indexStock.html.twig
@@ -92,15 +92,16 @@
             </div>
         </div>
     {% endif %}
-
-    {% block javascript %}
-        <script>
-            $(document).ready(function () {
-                $("titulolibro").click(function () {
-                    $("cuerpoLibro").toggle(1000);
-                });
-            });
-        </script>
-    {% endblock %}
 {% endblock %}
+{% block javascript %}
+    <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
+    <script>
+        $(document).ready(function () {
+            $("#controlBusqueda").toggle();
 
+            $("#act_busq").click(function () {
+                $("#controlBusqueda").toggle();
+            });
+        });
+    </script>
+{% endblock %}
