--- a/src/BcBundle/Resources/views/Usuario/indexUsuario.html.twig
+++ b/src/BcBundle/Resources/views/Usuario/indexUsuario.html.twig
@@ -7,8 +7,8 @@
                 <br>
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="{{asset("imgdata/user-find.png")}}" height="50" width="50">
-                        <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-info">
+                        <h2><b style="color: white"><i class="fas fa-check"></i> Usuarios </b></h2>
+                        <br>
                     </div>
                 </div>
                 <br>
@@ -18,35 +18,7 @@
                 <br>
                 <div id="controlBusqueda" class="row">
                     <div class="col-md-6">
-                        <h3><b><img src="{{asset("imgdata/user-find.png")}}" height="50" width="50">Búsqueda de usuario</b></h3>
-                    </div>
-                    <div class="col-md-6">
-                        <table style="width: 75%">
-                            <form accept-charset="utf-8" method="POST">
-                                <tr>
-                                    <td><b>Seleccione el parámetro de búsqueda : </b><br>
-                                        <select name="ParamBusq">
-                                            <option value="nada"></option>
-                                            <option value="nif">NIF</option>
-                                            <option value="email">Email</option>
-                                            <option value="tlf">Tlf</option>
-                                            <option value="poblacion">Población</option>
-                                            <option value="provincia">Provincia</option>
-                                        </select>
-                                    </td>
-                                </tr>             
-                                <tr>
-                                    <td ><b>Texto de clave : </b><br>
-                                        <input type="text" id="parametroBusqueda" value="" placeholder="" maxlength="30" autocomplete="off" />
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <br><input id="activarBusqueda" type="button" value="Buscar.." class="btn btn-dark"><input id="cancelarBusqueda" type="button" value="Cancelar" class="btn btn-danger">
-                                    </td>
-                                </tr>
-                            </form>
-                        </table>
+                       <!-- <h3><b><img src="{{asset("imgdata/user-find.png")}}" height="50" width="50">Búsqueda de usuario</b></h3>-->
                     </div>
                 </div>
                 <br>
@@ -149,6 +121,11 @@
 
             $("#act_busq").click(function () {
                 $("#controlBusqueda").toggle();
+            });
+
+            $("#MenuUser").toggle();
+            $("#titleUser").click(function () {
+                $("#MenuUser").toggle();
             });
         });
     </script>
