--- a/src/BcBundle/Resources/views/Usuario/login.html.twig
+++ b/src/BcBundle/Resources/views/Usuario/login.html.twig
@@ -126,6 +126,11 @@
     <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
     <script>
         $(document).ready(function () {
+            $("#MenuUser").toggle();
+            $("#titleUser").click(function () {
+                $("#MenuUser").toggle();
+            });
+            
             $("#add").toggle();
             $("#logSesion").toggle();
 
