--- a/src/BcBundle/Resources/views/Usuario/perfilUsuario.html.twig
+++ b/src/BcBundle/Resources/views/Usuario/perfilUsuario.html.twig
@@ -7,6 +7,8 @@
                 <br>
                 <div class="row">
                     <div class="col-md-3">
+                        <h2><b style="color: white"><i class="fas fa-check"></i> Perfil </b></h2>
+                        <br>
                         <a href="{{path("bc_edit_usuario",{"id":usuario.idUsuario})}}">
                             <!--<i class="fas fa-pencil-alt" style="font-size: 170%"> Editar 
                             </i>-->
@@ -16,6 +18,7 @@
                     </div>
                     <br>
                     <div class="col-md-3">
+                        <br><br><br><br>
                         <a href="{{path("bc_del_usuario",{"id":usuario.idUsuario})}}">
                             <!--<i class="fas fa-trash" style="font-size: 170%"> Eliminar
                             </i>-->
@@ -101,10 +104,9 @@
     <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
     <script>
         $(document).ready(function () {
-            $("#controlBusqueda").toggle();
-
-            $("#act_busq").click(function () {
-                $("#controlBusqueda").toggle();
+            $("#MenuUser").toggle();
+            $("#titleUser").click(function () {
+                $("#MenuUser").toggle();
             });
         });
     </script>
