--- a/src/BcBundle/Resources/views/layout.html.twig
+++ b/src/BcBundle/Resources/views/layout.html.twig
@@ -16,16 +16,6 @@
             <link href="{{asset('assets/css/bootstrap.cosmo.min.css')}}" type="text/css" rel="stylesheet" />
             <link href="{{asset('assets/css/styles.css')}}" type="text/css" rel="stylesheet" />
         {% endblock %}
-        {% block javascript %}
-            <script src="{{asset('assets/js/function.js')}}" type="text/javascript">
-                $(document).ready(function () {
-                    $("#menuDespUser").hide();
-                    $("#titleDespUser").click(function () {
-                        $("#menuDespUser").toggle();
-                    });
-                });
-            </script>
-        {% endblock %}
     </head>
     <body>
         <header class="bg-primary">
@@ -40,14 +30,16 @@
             <nav class="navbar navbar-dark bg-primary">
                 {% if app.user != null %}
                     <a class="navbar-brand" href="{{path("login")}}"><i class="fas fa-home"></i> Inicio</a>
-                    <h4 id="titleDespUser">
-                        {% if app.user.rol != "ADMIN" %}
-                            <i class="fas fa-user"></i>
-                        {% else %}
-                            <i class="fas fa-chess-king"></i>
-                        {% endif %}
-                        {{(app.user.nick)}}
-                    </h4>
+                    <div id="titleUser">
+                        <h4>
+                            {% if app.user.rol != "ADMIN" %}
+                                <i class="fas fa-user"></i>
+                            {% else %}
+                                <i class="fas fa-chess-king"></i>
+                            {% endif %}
+                            {{(app.user.nick)}}
+                        </h4>
+                    </div>
                     <a class="navbar-brand btn-left" href="{{path("logout")}}"><i class="fas fa-cog"></i> Cerrar sesion</a>
                 {% else %}
                     <a class="navbar-brand" href="{{path("bc_homepage")}}" on><i class="fas fa-home"></i> Inicio</a>
@@ -56,14 +48,18 @@
             </nav>
         </header>
         {% if app.user != null %}
-            <div id="menuDespUser" class="container ">
+            <div id="MenuUser" class="container text-center">
                 <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-5">
                     </div>
-                    <div class="col-md-2 bg-dark text-center">
-                        <a class="navbar-brand btn-left" href="{{path("bc_perfil_usuario",{"id":app.user.idUsuario})}}"><i class="fas fa-cog"></i> Perfil</a>
+                    <div class="col-2 bg-dark text-center">
+                        <a class="navbar-brand btn-left " href="{{path("bc_perfil_usuario",{"id":app.user.idUsuario})}}">
+                            <i class="fas fa-cog"></i><b>Perfil</b>
+                        </a>
                         <br>
-                        <a class="navbar-brand btn-left" href="{{path("bc_index_listadolibros",{"id":app.user.idUsuario})}}"><i class="fas fa-cog"></i> Mis libros </a>
+                        <a class="navbar-brand btn-left" href="{{path("bc_index_listadolibros",{"id":app.user.idUsuario})}}">
+                            <i class="fas fa-cog"></i><b>MiLista</b>
+                        </a>
                     </div>
                     <div class="col-4">
                     </div>
@@ -86,4 +82,14 @@
         </footer>
     </body>
 </html>
-
+{% block javascript %}
+    <script src="{{asset('assets/js/function.js')}}" type="text/javascript"></script>
+    <script>
+        $(document).ready(function () {
+            $("#MenuUser").toggle();
+            $("#titleUser").click(function () {
+                $("#MenuUser").toggle();
+            });
+        });
+    </script>
+{% endblock %}
