--- a/src/BcBundle/Resources/views/Libro/indexNoValLibro.html.twig
+++ b/src/BcBundle/Resources/views/Libro/indexNoValLibro.html.twig
@@ -16,9 +16,9 @@
                     <div class="col-md-6">
                         <br><br><br><br>
                         <img src="{{asset("imgdata/libro-find.png")}}" height="50" width="50">
-                        <a href="{{path("bc_find_libro")}}">
+                        <!--<a href="{{path("bc_find_libro")}}">
                             <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-info">
-                        </a>
+                        </a>-->
                         {% if app.user.rol == 'ADMIN' %}
                             <a href="{{path("bc_index_libro")}}">
                                 <input id="BTVerValidados" type="button" value="Ver libros validados" class="btn btn-success">
