--- a/src/BcBundle/Resources/views/Usuario/editUsuario.html.twig
+++ b/src/BcBundle/Resources/views/Usuario/editUsuario.html.twig
@@ -7,9 +7,9 @@
             <br>
             <div class="row">
                 <div class="col-md-6">
-                    <a href="{{path("bc_index_usuario")}}">
-                        <input type="button" value="Ver todos los usuarios" class="btn btn-warning">
-                    </a>
+                    <!--<a href="{{path("bc_index_usuario")}}">-->
+                    <input type="button" onclick="javascript:history.back()" value="Ver todos los usuarios" class="btn btn-warning">
+                    <!--</a>-->
                 </div>
             </div>
             <br>
