--- a/src/BcBundle/Resources/views/Stock/indexStock.html.twig
+++ b/src/BcBundle/Resources/views/Stock/indexStock.html.twig
@@ -24,9 +24,9 @@
                                     <br><i class="fas fa-arrow-alt-circle-right"></i><b> Se halla en :</b> {{stock.nombre}}
                                     <br><i class="fas fa-check"></i><b> Disponibilidad :</b> 
                                         {% if stock.disponible == 0 %}
-                                        <span style="color:red;">No disponible</span>
+                                        <span style="color:red;"><b>No disponible</b></span>
                                     {% else %}
-                                        <span style="color:green;">Disponible</span>  
+                                        <span style="color:green;"><b>Disponible</b></span>  
                                     {% endif %}
                                 </h4>
                             </div>
