--- a/src/BcBundle/Resources/views/Autor/perfilAutor.html.twig
+++ b/src/BcBundle/Resources/views/Autor/perfilAutor.html.twig
@@ -21,7 +21,7 @@
                             </div>
                             <br>
                             <div class="col-md-3">
-                                <a href="{{path("bc_delete_autor",{"id":autor.idautor})}}">
+                                <a onclick="confirmarBorradoAutor({{autor.idautor}})">
                                     <img src="{{asset("imgdata/user-del.png")}}" height="50" width="50">
                                     <input type="button" value="Eliminar autor" class="btn btn-danger"></a>
                                 </a>
@@ -46,49 +46,49 @@
                     <div class="col-md-1">
                     </div>
                     <div class="col-md-4">
-                    {% if autor.foto == null or autor.foto == "" %}
-                        <img src="{{asset("imgdata/smile.png")}}" height="230" width="200"> 
-                    {% else %}
-                        <img src="{{asset(autor.foto)}}" height="230" width="200"> 
-                    {% endif %}
+                        {% if autor.foto == null or autor.foto == "" %}
+                            <img src="{{asset("imgdata/smile.png")}}" height="230" width="200"> 
+                        {% else %}
+                            <img src="{{asset(autor.foto)}}" height="230" width="200"> 
+                        {% endif %}
+                        <br>
+                        <br>
+                    </div>
                     <br>
-                <br>
-            </div>
+                {% else %}
+                    <div class="container bg-danger">
+                        <div class="row">
+                            <div class="col-md-3">
+                            </div>
+                            <div class="col-md-5" align="center">
+                                <br><br>
+                                <h1>¡Alto ahí, forastero! ¡Debes inscribirte primero para entrar a esta sección!</h1>
+                                <br><br>
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
+            {% else %}
+                <div class="container bg-danger">
+                    <div class="row">
+                        <div class="col-md-3">
+                        </div>
+                        <div class="col-md-5" align="center">
+                            <br><br>
+                            <h1>¡Alto ahí, forastero! ¡Debes inscribirte primero para entrar a esta sección!</h1>
+                            <br><br>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
             <br>
-        {% else %}
-            <div class="container bg-danger">
-                <div class="row">
-                    <div class="col-md-3">
-                    </div>
-                    <div class="col-md-5" align="center">
-                        <br><br>
-                        <h1>¡Alto ahí, forastero! ¡Debes inscribirte primero para entrar a esta sección!</h1>
-                        <br><br>
-                    </div>
-                </div>
-            </div>
-        {% endif %}
-    {% else %}
-        <div class="container bg-danger">
-            <div class="row">
-                <div class="col-md-3">
-                </div>
-                <div class="col-md-5" align="center">
-                    <br><br>
-                    <h1>¡Alto ahí, forastero! ¡Debes inscribirte primero para entrar a esta sección!</h1>
-                    <br><br>
-                </div>
-            </div>
-        </div>
-    {% endif %}
-    <br>
-{% endblock %}
-{% block javascript %}
-    <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
-    <script>
-        $("#MenuUser").toggle();
-        $("#titleUser").click(function () {
-            $("#MenuUser").toggle();
-        });
-    </script>
-{% endblock %}
+        {% endblock %}
+        {% block javascript %}
+            <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
+            <script>
+                                    $("#MenuUser").toggle();
+                                    $("#titleUser").click(function () {
+                                        $("#MenuUser").toggle();
+                                    });
+            </script>
+        {% endblock %}
