--- a/src/BcBundle/Resources/views/Libreria/indexLibreria.html.twig
+++ b/src/BcBundle/Resources/views/Libreria/indexLibreria.html.twig
@@ -8,12 +8,12 @@
                 <div class="row">
                     <div class="col-md-6">
                         <h2><b style="color: white"><i class="fas fa-check"></i> Liberías </b></h2><br>
-                    {% if app.user.rol == 'ADMIN' %}
-                        <a href="{{path("bc_add_libreria")}}">
-                            <img src="{{asset("imgdata/libreria-add.png")}}" height="50" width="50">
-                            <input type="button" value="Inscribir librería" class="btn btn-success">
-                        </a>
-                    {% endif %}
+                        {% if app.user.rol == 'ADMIN' %}
+                            <a href="{{path("bc_add_libreria")}}">
+                                <img src="{{asset("imgdata/libreria-add.png")}}" height="50" width="50">
+                                <input type="button" value="Inscribir librería" class="btn btn-success">
+                            </a>
+                        {% endif %}
                     </div>
                 </div>
                 <br>
@@ -42,7 +42,9 @@
                                         <a href="{{path("bc_edit_libreria",{"id":libreria.idLibreria})}}"><img src="{{asset("imgdata/libreria-edit.png")}}" height="50" width="50"></a>
                                     </div>
                                     <div class="col-md-3">
-                                        <a href="{{path("bc_delete_libreria",{"id":libreria.idLibreria})}}"><img src="{{asset("imgdata/libreria-del.png")}}" height="50" width="50"></a>
+                                        <a onclick="confirmarBorradoLibreria({{libreria.idLibreria}})">
+                                            <img src="{{asset("imgdata/libreria-del.png")}}" height="50" width="50">
+                                        </a>
                                     </div>
                                 {% endif %} 
                             </h2>
@@ -112,9 +114,9 @@
 {% block javascript %}
     <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
     <script>
-        $("#MenuUser").toggle();
-        $("#titleUser").click(function () {
-            $("#MenuUser").toggle();
-        });
+                                            $("#MenuUser").toggle();
+                                            $("#titleUser").click(function () {
+                                                $("#MenuUser").toggle();
+                                            });
     </script>
 {% endblock %}
