--- a/src/BcBundle/Resources/views/Libro/indexNoValLibro.html.twig
+++ b/src/BcBundle/Resources/views/Libro/indexNoValLibro.html.twig
@@ -16,9 +16,6 @@
                     <div class="col-md-6">
                         <br><br><br><br>
                         <img src="{{asset("imgdata/libro-find.png")}}" height="50" width="50">
-                        <!--<a href="{{path("bc_find_libro")}}">
-                            <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-info">
-                        </a>-->
                         {% if app.user.rol == 'ADMIN' %}
                             <a href="{{path("bc_index_libro")}}">
                                 <input id="BTVerValidados" type="button" value="Ver libros validados" class="btn btn-success">
@@ -72,20 +69,15 @@
                                 {% endif %}
                                 {% if app.user.rol == 'ADMIN' %} 
                                     <br><br>
-
                                     <div class="row">
                                         <div class="col-md-2"></div>
                                         <div class="col-md-3">
-                                            <a href="{{path("bc_delete_libro",{"id":libro.id_libro})}}">
-                                                <!--<i class="fas fa-trash" style="font-size: 250%">   
-                                                </i>-->
+                                            <a onclick="confirmarBorradoLibro({{libro.id_libro}})">
                                                 <img src="{{asset("imgdata/libro-del.png")}}" height="50" width="50">
                                             </a>
                                         </div>
                                         <div class="col-md-3">
                                             <a href="{{path("bc_edit_libro",{"id":libro.id_libro})}}">
-                                                <!--<i class="fas fa-pencil-alt" style="font-size: 250%">
-                                                 </i>-->
                                                 <img src="{{asset("imgdata/libro-edit.png")}}" height="50" width="50">
                                             </a>
                                         </div>
@@ -163,9 +155,9 @@
 {% block javascript %}
     <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
     <script>
-        $("#MenuUser").toggle();
-        $("#titleUser").click(function () {
-            $("#MenuUser").toggle();
-        });
+                                                $("#MenuUser").toggle();
+                                                $("#titleUser").click(function () {
+                                                    $("#MenuUser").toggle();
+                                                });
     </script>
 {% endblock %}
