--- a/src/BcBundle/Resources/views/Libro/perfilLibro.html.twig
+++ b/src/BcBundle/Resources/views/Libro/perfilLibro.html.twig
@@ -22,9 +22,9 @@
                             </div>
                             <br>
                             <div class="col-md-3">
-                                <a href="{{path("bc_delete_libro",{"id":libros.idLibro})}}">
+                                <a onclick="confirmarBorradoLibro({{libros.idLibro}})">
                                     <img src="{{asset("imgdata/libro-del.png")}}" height="50" width="50">
-                                    <input type="button" value="Eliminar libro" class="btn btn-danger">
+                                    <input type="button" value="Eliminar libro" class="btn btn-danger"></a>
                                 </a>
                             </div>
                         {% endif %}     
@@ -56,16 +56,6 @@
                             <br><br>
                             <div class="row">
                                 <div class="col-md-2"></div>
-                                <div class="col-md-3">
-                                    <a href="{{path("bc_delete_libro",{"id":libros.idLibro})}}">
-                                        <img src="{{asset("imgdata/libro-del.png")}}" height="50" width="50">
-                                    </a>
-                                </div>
-                                <div class="col-md-3">
-                                    <a href="{{path("bc_edit_libro",{"id":libros.idLibro})}}">
-                                        <img src="{{asset("imgdata/libro-edit.png")}}" height="50" width="50">
-                                    </a>
-                                </div>
                                 <div class="col-md-3">
                                     <a href="">
                                         <i class="fas fa-plus" style="font-size: 260%"></i><b>MiLista</b>
@@ -143,9 +133,9 @@
 {% block javascript %}
     <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
     <script>
-        $("#MenuUser").toggle();
-        $("#titleUser").click(function () {
-            $("#MenuUser").toggle();
-        });
+                                    $("#MenuUser").toggle();
+                                    $("#titleUser").click(function () {
+                                        $("#MenuUser").toggle();
+                                    });
     </script>
 {% endblock %}
