--- a/src/BcBundle/Resources/views/layout.html.twig
+++ b/src/BcBundle/Resources/views/layout.html.twig
@@ -5,10 +5,7 @@
         <title>
             {% block title %} BOOK CREW {% endblock %}
         </title>
-        <!--<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>-->
         <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
-        <!--<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>-->
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
         {% block stylesheet %}
@@ -18,7 +15,7 @@
         {% endblock %}
     </head>
     <body>
-        <header class="bg-primary">
+        <header class="bg-primary"> 
             <div class="container text-center">
                 <h1>
                     BOOK CREW<br>
@@ -71,14 +68,16 @@
                 Contenido por defecto
             {% endblock %}
         </section>
-        <br><br><br><br><br>
+        <br><br><br><br><br><br>
         <footer class="bg-info text-center">
             <br>
-            <h4><b>Autor:</b> Felipe Ruz Pérez - DAW 2017-2018</h4>
+            <!--<h4><b>Autor:</b> Felipe Ruz Pérez - DAW 2017-2018</h4>
             <h8><b>Herramientas usadas:</b></h8>
-            Symfony 3
+            Symfony 3-->
             <br>
-            <br>     
+            <br> 
+            <br>
+            <br>
         </footer>
     </body>
 </html>
